testdata/bad/timeDecimalMinutesZulu.ion
// Minutes missing
1969-02-23T00:00.00Z
